--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -2,7 +2,7 @@
   "translation": {
     "mainScreen": {
       "navTitle": "Menu",
-      "textWelcome": "Hello Hostaway team 👋🏼",
+      "textWelcome": "Hello developers 👋🏼",
       "textAbout": "This sample app showcases some simple functionalities I implemented to give you a better understanding of my skillset. Feel free to look around!",
       "form": "Form",
       "list": "List",
