--- a/src/translations/sl.json
+++ b/src/translations/sl.json
@@ -2,7 +2,7 @@
   "translation": {
     "mainScreen": {
       "navTitle": "Meni",
-      "textWelcome": "Živijo Hostaway ekipa 👋🏼",
+      "textWelcome": "Živijo razvijalci 👋🏼",
       "textAbout": "Ta vzorčna aplikacija prikazuje nekaj preprostih funkcionalnosti, ki sem jih implementiral, da bi vam pomagal bolje razumeti moje sposobnosti.",
       "form": "Obrazec",
       "list": "Seznam",
